tests/ui/macros/issue-100199.stderr
error[E0405]: cannot find trait `MyTrait` in the crate root
  --> $DIR/issue-100199.rs:1:1
   |
LL | #[issue_100199::struct_with_bound]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | not found in the crate root
   | in this procedural macro expansion
   |
  ::: $DIR/auxiliary/issue-100199.rs:12:1
   |
LL | pub fn struct_with_bound(_: TokenStream, _: TokenStream) -> TokenStream {
   | ----------------------------------------------------------------------- in this expansion of `#[issue_100199::struct_with_bound]`
   |
help: consider importing this trait
   |
LL + use traits::MyTrait;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0405`.
